testing integration tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.pythonPath": "env\\Scripts\\python.exe",
     "python.terminal.executeInFileDir": true,
     "python.autoComplete.extraPaths": [
-        "./Lambda/lambda_function/"
+        ".\\Lambda\\lambda_function\\"
     ]
         
 }
