--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "PYTHONPATH": "${workspaceFolder}"
+            "pythonPath": "${workspaceFolder}"
         }
     ]
 }
