fix pyttest script

--- a/.github/workflows/dev-test-application.yaml
+++ b/.github/workflows/dev-test-application.yaml
@@ -19,4 +19,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r Lambda/lambda_function/requirements.txt
       - name: Run tests with pytest
-        run: pytest -m unit
+        run: pytest -m unit --disable-warnings
