--- a/.github/workflows/master-deploy-application.yaml
+++ b/.github/workflows/master-deploy-application.yaml
@@ -18,7 +18,7 @@ jobs:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
-          function_name: budgetScheduler
+          function_name: budget_scheduler
           zip_file: Lambda/deployment.zip
           memory_size: 128
           timeout: 20
