--- a/.github/workflows/master-deploy-application.yaml
+++ b/.github/workflows/master-deploy-application.yaml
@@ -20,6 +20,7 @@ jobs:
           aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
           function_name: budget_scheduler
           zip_file: Lambda/deployment.zip
+          dry_run: true
           memory_size: 128
           timeout: 20
           handler: lambda_function.lambda_handler
