--- a/.github/workflows/master-deploy-application.yaml
+++ b/.github/workflows/master-deploy-application.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Zip code
         run: |
-          cd Lambda && ls && zip deployment.zip lambda_function/
+          cd Lambda/lambda_function && ls && zip deployment.zip *
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
