--- a/.github/workflows/master-deploy-application.yaml
+++ b/.github/workflows/master-deploy-application.yaml
@@ -19,7 +19,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_DEFAULT_REGION }}
           function_name: budget_scheduler
-          zip_file: Lambda/deployment.zip
+          zip_file: Lambda/lambda_function/deployment.zip
           memory_size: 128
           timeout: 35
           handler: lambda_function.lambda_handler
