--- a/.github/workflows/master-deploy-application.yaml
+++ b/.github/workflows/master-deploy-application.yaml
@@ -22,6 +22,6 @@ jobs:
           zip_file: Lambda/lambda_function/deployment.zip
           memory_size: 128
           timeout: 35
-          handler: lambda_function.lambda_handler
+          handler: create_cw_event.create_cloudwatch_event
           role: arn:aws:iam::982658172500:role/lambda_budget_scheduler_policy
           runtime: python3.7 
